# trabajo_final_rust

./: .gitignore  Cargo.toml
reporte/: Cargo.toml  lib.rs
sistema-elecciones/: Cargo.toml  lib.rs
