[package]
name = "reporte"
version = "0.0.1"
authors = ["Grupo 5"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "4.3.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"] }

sistema-elecciones = { path = "../sistema-elecciones", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
# ink_e2e = { version = "4.3.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "sistema-elecciones/std",
]
ink-as-dependency = []
e2e-tests = []

