[package]
name = "sistema-elecciones"
version = "0.0.1"
authors = ["Grupo 5"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "4.3.0", default-features = false }
# ink = { version = "4.2.9", default-features = false }
chrono = { version = "0.4.38", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

[dev-dependencies]
# ink_e2e = { version = "5.0.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
